# linguistic-steganalysis-with-llms

./: .gitignore  .rsyncignore  README.md  pyproject.toml  run.sh  sync_logs_from_cluster.sh  sync_to_cluster.sh  test.ipynb  test.py  test_0.py  utils.py
adapter/: adapter_config.json  log.txt
adapter/checkpoint-20000/: scaler.pt
adapter/checkpoint-21000/: rng_state.pth  trainer_state.json
adapter/checkpoint-22000/: rng_state.pth  trainer_state.json
analysis/: evaluation.py  metrics.py
checkpoint-20000/: rng_state.pth  scheduler.pt  trainer_state.json
checkpoint-21000/: scaler.pt  scheduler.pt
checkpoint-22000/: scaler.pt  scheduler.pt
logs/run_1/ac/: cover.txt
logs/run_2/: manifest.json
logs/run_3/: manifest.json
logs/run_3/ac/: cover.txt  stego.txt
logs/run_3/hc5/: stego.txt
logs/run_4/: manifest.json
logs/run_4/adg/: cover.txt
logs/run_4/hc5/: stego.txt
logs/run_5/: manifest.json
logs/run_5/ac/: stego.txt
logs/run_5/adg/: cover.txt  stego.txt
logs/run_5/hc5/: stego.txt
logs/run_6/: manifest.json
logs/run_6/ac/: stego.txt
logs/run_7/: manifest.json
logs/run_7/ac/: stego.txt
logs/run_7/adg/: cover.txt  stego.txt
logs/run_8/: manifest.json
logs/run_8/ac/: stego.tokens.jsonl
logs/run_8/adg/: cover.tokens.jsonl  stego.tokens.jsonl  stego.txt
logs/run_8/hc5/: stego.tokens.jsonl
