[project]
name = "linguistic-steganalysis-with-llms"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cleantext>=1.1.4",
    "datasets>=4.4.1",
    "jsonlines>=4.0.0",
    "peft>=0.18.0",
    "protobuf>=6.33.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
